force-app/main/default/objects/LoanRepayment__c/fields/AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>AmountPaid__c</fullName>
    <label>AMOUNT PAID(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>