force-app/main/default/objects/LoanRepayment__c/fields/AmountPaidFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFCY__c</fullName>
    <label>AMOUNT PAID(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>