force-app/main/default/objects/LoanRepayment__c/fields/BankAccountLR__c.field-meta.xml
<CustomField>
    <fullName>BankAccountLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-L/R</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>BankAccountLR</relationshipName>
    <type>Lookup</type>
</CustomField>