force-app/main/default/objects/LoanRepayment__c/fields/BeneficiaryLR__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-L/R</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BeneficiaryLR</relationshipName>
    <type>Lookup</type>
</CustomField>