force-app/main/default/objects/LoanRepayment__c/fields/ClosingBalance__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalance__c</fullName>
    <label>CLOSING BALANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>