force-app/main/default/objects/LoanRepayment__c/fields/ClosingBalanceFCY__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceFCY__c</fullName>
    <label>CLOSING BALANCE(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>