force-app/main/default/objects/LoanRepayment__c/fields/InterestsAmount__c.field-meta.xml
<CustomField>
    <fullName>InterestsAmount__c</fullName>
    <label>INTERESTS AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>