force-app/main/default/objects/LoanRepayment__c/fields/LoanRepaymentCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>LoanRepaymentCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN REPAYMENT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>LoanRepaymentCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>