force-app/main/default/objects/LoanRepayment__c/fields/LoanRepaymentDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>LoanRepaymentDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN REPAYMENT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>LoanRepaymentDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>