force-app/main/default/objects/LoanRepayment__c/fields/LoanRepaymentName__c.field-meta.xml
<CustomField>
    <fullName>LoanRepaymentName__c</fullName>
    <label>LOAN REPAYMENT NAME</label>
    <type>TextArea</type>
</CustomField>