force-app/main/default/objects/LoanRepayment__c/fields/OpeningBalance__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalance__c</fullName>
    <label>OPENING BALANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>