force-app/main/default/objects/LoanRepayment__c/fields/PaymentConfirmedLR__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedLR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-L/R</label>
    <type>Checkbox</type>
</CustomField>