force-app/main/default/objects/LoanRepayment__c/fields/PreviousLoanRepaymentID__c.field-meta.xml
<CustomField>
    <fullName>PreviousLoanRepaymentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS LOAN PAYMENT ID</label>
    <referenceTo>LoanRepayment__c</referenceTo>
    <relationshipLabel>NEXT LOAN PAYMENT</relationshipLabel>
    <relationshipName>PreviousLoanRepayment</relationshipName>
    <type>Lookup</type>
</CustomField>