force-app/main/default/objects/LoanRepayment__c/fields/RepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmount__c</fullName>
    <label>REPAYMENT AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>