force-app/main/default/objects/LoanRepayment__c/fields/RepaymentAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmountFCY__c</fullName>
    <label>REPAYMENT AMOUNT(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>