force-app/main/default/objects/LoanRepayment__c/fields/UnpaidBalanceOfLR__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfLR__c</fullName>
    <label>UNPAID BALANCE OF L/R(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>