force-app/main/default/objects/LoanRepayment__c/fields/UnpaidBalanceOfLRFCY__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfLRFCY__c</fullName>
    <label>UNPAID BALANCE OF L/R(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>