force-app/main/default/objects/LoanRepayment__c/recordTypes/LoanRepayFCY.recordType-meta.xml
<RecordType>
    <fullName>LoanRepayFCY</fullName>
    <active>true</active>
    <label>Loan Repayment-FCY</label>
</RecordType>