force-app/main/default/objects/LoanRepayment__c/recordTypes/LoanRepayLocal.recordType-meta.xml
<RecordType>
    <fullName>LoanRepayLocal</fullName>
    <active>true</active>
    <label>Loan Repayment-Local</label>
</RecordType>